@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Sample {
  -barcodeNumber
}

class Company {
  -designation
}

class ClinicalAnalysisLaboratory {
  -String name
  -String adress
  -long phoneNumber
  -long tin
  -TestStore testStore
  +getTestStore()
}
class Test {
  -nhsCode;
  -internalCode;
  -client;
  -testType;
  -sampleCollectionMethod;
  -parameterCategory;
  -parameter;
  -samples
  -registrationDate;
  -samplesCollectionDate;
  -chemicalAnalysisDate;
  -diagnosisDate;
  -validationDate;
}

class MedicalLabTechnician {
  -employeeID
  -organizationRole
  -name
  -address
  -phoneNumber
  -eMail
  -standardOcupationalClassificationCode
}

Company "1" -- "1..*" ClinicalAnalysisLaboratory : has >
ClinicalAnalysisLaboratory "1" -- "*" Test : has >
Test "1" -- "*" Sample : has >
Sample "1" -- "1" MedicalLabTechnician : created by >
@enduml